Index, Landing - fixed overflow bugs

--- a/hey-team/src/index.css
+++ b/hey-team/src/index.css
@@ -29,7 +29,7 @@
 html
 {
   background-color: var(--alt-background);
-  overflow: auto;
+  overflow-y: hidden;
 }
 
 body {
